# symbolic-mgu

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  TODO.md  build.rs  clippy.toml  gen_lib_coverage.sh  pre-commit-script.sh  profile_test.sh
.cargo/: config.toml  lingo.dic  spellcheck.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: rust.yml
benches/: README.md
docs/: ALPHA12_RECOMMENDATIONS.md  AUDIT_FINDINGS.md  AUDIT_PLAN.md  FORMATTER_DESIGN.md  IMPROVEMENTS_CHECKLIST.md  IO_ERROR_SUPPORT.md  METAMATH_ARCHITECTURE.md  METAMATH_ARCHITECTURE_V2.md  METAMATH_STATEMENT_INTEGRATION.md  MGERROR_AUDIT.md  PARAMETRIC_METAVARIABLE_DESIGN.md  PHASE2_TEST_COVERAGE.md  PHASE3_API_REVIEW.md  POST_RELEASE_TODO.md  REMAINING_WORK_PRIORITIZED.md  SCHOLARLY_CONTEXT.md  SESSION_SUMMARY_2025-01-04.md  SESSION_SUMMARY_2025-11-04.md  TESTING_PHILOSOPHY.md  TEST_GAPS_PLAN.md
docs/archive/: BACKPORT_PLAN.md  BOOL_EVAL_BACKPORT_PLAN.md  GENERIC_TAUTOLOGY_PLAN.md
docs/diagrams/: trait_hierarchy.puml
examples/: README.md  debug_theorem.rs  find_first_failing.rs  test_search.rs  test_subscripts.rs
pmproofs_history/: README.md  analyze_proofs.py  extract_subproofs.py  find_missing_short_proofs.py  subproofs.json  validate_proofs.py  validate_proofs_drule.py
scripts/: normalize_dictionary.py
src/: Epigram.md  FormalSpec.md  Hyperlinks.md  NodeBytesLogicTable.md  Purpose.md  SystemOverview.md  error.rs  lib.rs  macros.rs
src/bool_eval/: README.md  generate_boolean_ops.py  generated_enum.rs  mod.rs
src/bool_eval_next/: ast_expr_parse.py  generate_boolean_ops.py  generated_enum.rs  mod.rs
src/distinct/: mod.rs  pair.rs  simple_graph.rs
src/error/: base.rs  err_type.rs  mod.rs
src/formatter/: color.rs  formatters.rs  mod.rs  output_formatter.rs  registry.rs  tests.rs  type_colors.rs
src/logic/: LUKASIEWICZ_NOTATION.md  mod.rs  polish.rs
src/logic/propositional/: mod.rs
src/logic/propositional/axioms/: mod.rs
src/logic/propositional/axioms/cn_basis/: mod.rs
src/logic/propositional/definitions/: mod.rs
src/logic/propositional/definitions/cn_basis/: mod.rs
src/logic/propositional/rules/: mod.rs
src/logic/propositional/rules/cn_basis/: mod.rs
src/metamath/: comment.rs  database.rs  expr_parser.rs  filesystem.rs  label.rs  mod.rs  parser.rs  pattern.rs  proof.rs  proof_builder.rs  symbolic.rs  tokenizer.rs  verification.rs
src/metavariable/: charset.rs  decorator.rs  enums.rs  factory.rs  meta_byte.rs  mod.rs  parametric.rs  wide.rs  wide_factory.rs
src/mgutype/: base.rs  formatting.rs  mod.rs  type_factory.rs  type_trait.rs
src/node/: base.rs  enums.rs  factory.rs  mod.rs
src/node/node_byte/: NodeByteTable.md  base.rs  factory.rs  mod.rs
src/search/: mod.rs
src/statement/: base.rs  compact_proof.rs  inclusion.rs  mod.rs  operations.rs  substitution.rs
src/term/: base.rs  factory.rs  mod.rs  simple.rs  substitution.rs
tests/: README.md  custom_formatter_test.rs  formatter_stress_test.rs  functional_completeness.rs  metamath_expr_parsing.rs  metamath_proof_building.rs  metamath_proof_verification.rs  metamath_statement_conversion.rs  pmproofs_validation.rs  regression_compact_proofs.rs  statement_conversion.rs  term_invariants.rs  type_capability_validation.rs  unification_properties.rs
tests/fixtures/: comments.mm  fs_test.mm  multiline.mm  realistic.mm  utf8_labels.mm
tests/metamath-exe/: README.md
tests/metamath-test/: README.md  demo0-rp.mm
