[package]
edition = "2018"
rust-version = "1.77.0"
name = "symbolic-mgu"
version = "0.1.0-alpha.4"
authors = ["Richard Penner <richardpenner@gmail.com>"]
build = "build.rs"
exclude = [
    ".cargo/config.toml",
    ".claude/",
    ".github/",
    "pmproofs_history/",
    "pre-commit-script.sh",
    "src/bin/",
    "src/example/",
    "src/NodeBytesLogicTable.md",
    "TODO.md",
]
autobins = true
autoexamples = true
autotests = true
autobenches = true
description = "Symbolic logic unification using Most General Unifiers (MGU). Implements Meredith's condensed detachment for automated theorem proving."
readme = "README.md"
keywords = [
    "logic",
    "unification",
    "theorem-proving",
    "mgu",
    "condensed-detachment",
]
categories = [
    "mathematics",
    "science",
    "algorithms",
]
license = "MIT OR Apache-2.0"
repository = "https://github.com/arpie-steele/symbolic-mgu"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
serde = ["dep:serde", "dep:serde_json"]
bigint = ["dep:num-bigint"]

[lib]
name = "symbolic_mgu"
path = "src/lib.rs"

[dependencies]
itertools = "0.14"
serde = { version = "1.0.228", features = ["derive"], optional = true }
serde_json = { version = "1.0.145", optional = true }
either = "1.15"
proc-macro2 = "1.0"
thiserror = "2.0"
num-bigint = { version = "0.4", optional = true }
num-traits = "0.2.19"

[build-dependencies]
version_check = "0.9"

[package.metadata.spellcheck]
config = ".cargo/spellcheck.toml"

[package.metadata.docs.rs]
    all-features = true
    rustdoc-args = ["--cfg", "docsrs"]
